...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpgradeMenu">


    <Button
        android:id="@+id/SpeedButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FC000000"
        android:onClick="clickSpeed"
        android:text=""
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SizeButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#FC000000"
        android:onClick="clickSize"
        android:text=""
...
        android:textColor="#2EFF00"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/SizeButton"
        app:layout_constraintTop_toBottomOf="@+id/SizeButton" />

    <Button
        android:id="@+id/SalesButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#FC000000"
        android:onClick="clickSales"
        android:text=""
        android:textColor="#2EFF00"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/HarvestButton"
        app:layout_constraintTop_toBottomOf="@+id/HarvestButton" />

    <Button
        android:id="@+id/AutomoveButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#FC000000"
        android:fontFamily="monospace"
        android:onClick="clickMove"
...
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/SalesButton"
        app:layout_constraintTop_toBottomOf="@+id/SalesButton" />

    <TextView
        android:id="@+id/back"
        android:layout_width="415dp"
        android:layout_height="22dp"
        android:background="@android:drawable/bottom_bar"
        android:fontFamily="monospace"
        android:onClick="clickBack"
        android:text="@string/back"
...
