<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InGame">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="#00858585"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/upgrade"
        android:layout_width="414dp"
        android:layout_height="21dp"
        android:background="@android:drawable/bottom_bar"
        android:fontFamily="monospace"
        android:onClick="clickUpgrades"
        android:shadowColor="#2EFF00"
        android:text="@string/upgrade_menu"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#2EFF00"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:fontFamily="monospace"
        android:onClick="clickSell"
        android:text="@string/sell"
        android:textAlignment="center"
        android:textColor="#2EFF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/money"
        app:layout_constraintStart_toStartOf="@id/money" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="40dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:fontFamily="monospace"
        android:text="@string/start_money"
        android:textAlignment="center"
        android:textColor="#2EFF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/automove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="40dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:fontFamily="monospace"
        android:onClick="clickAutoMove"
        android:text="@string/automove_default"
        android:textAlignment="center"
        android:textColor="#2EFF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>